# lustre-cli

./: .gitignore  README.md  pyproject.toml
config/: config.yaml.example
docs/: ARCHITECTURE.md  DEPLOY.md  LUSTRE_CLI_PROJECT_REPORT.docx  SETUP.md  TEST_REPORT.md
lustre-cli/: __init__.py  benchmark.py  config.py  deploy.py  deps.py  fault.py  initiator.py  logging_util.py  main.py  target.py  teardown.py  utils.py  validate.py
scripts/: demo-workflow.sh  install.sh
tests/: test_cli.py
